// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Padding > handles 0 value 1`] = `null`;

exports[`Styles/Padding > handles positive value 1`] = `
{
  "classNames": "_root_f9ee36",
  "variables": {
    "--rs-p-s": 4,
  },
}
`;

exports[`Styles/Padding > handles responsive value 1`] = `
{
  "classNames": "_root_f9ee36",
  "variables": {
    "--rs-p-l": 2,
    "--rs-p-m": 0,
    "--rs-p-s": 4,
  },
}
`;

exports[`Styles/Padding > handles undefined value 1`] = `null`;
